--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "files_manager",
   "version": "1.0.0",
   "description": "A simple file management API built with Node.js.",
-  "author": "Bezaleel Olakunori <bezaleeloci@gmail.com>",
-  "license": "MIT",
-  "private": true,
+  "license": "ISC",
   "main": "server.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint",
@@ -55,12 +53,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/B3zaleel/alx-files_manager"
+    "url": "https://github.com/alexUd01/alx-files_manager"
   },
-  "bugs": {
-    "url": "https://github.com/B3zaleel/alx-files_manager/issues"
-  },
-  "homepage": "https://github.com/B3zaleel/alx-files_manager/blob/main/README.md",
   "engines": {
     "node": "16.x",
     "npm": "8.x",
